#add_executable(test_sax2_srcsax_handler test_sax2_srcsax_handler.cpp)
#target_link_libraries(test_sax2_srcsax_handler srcsax ${LIBXML2_LIBRARIES})
#add_executable(test_srcsax_control_handler test_srcsax_control_handler.cpp)
#target_link_libraries(test_srcsax_control_handler srcsax ${LIBXML2_LIBRARIES})
#add_executable(test_srcsax_handler test_srcsax_handler.cpp srcSAXHandlerTest.hpp)
#target_link_libraries(test_srcsax_handler srcsax ${LIBXML2_LIBRARIES})

#add_test(NAME test_sax2_srcsax_handler COMMAND test_sax2_srcsax_handler)
#add_test(NAME test_srcsax_control_handler COMMAND test_srcsax_control_handler)
#add_test(NAME test_srcsax_handler COMMAND test_srcsax_handler)
